--- a/action.yml
+++ b/action.yml
@@ -1,9 +1,13 @@
 name: "Github Action for Helm on EKS (with aws-iam-authenticator)"
 description: "Authenticates on EKS clusters using aws-iam-authenticator and executes Helm commands. Can also be used with kubectl commands."
 branding:
-  icon: 'anchor'  
-  color: 'blue'
+  icon: "anchor"
+  color: "blue"
 inputs:
+  plugins:
+    description: "Plugins array"
+    required: false
+    default: []
   command:
     description: "Your command (kubectl or helm)"
     required: true
@@ -15,3 +19,4 @@ runs:
   image: "Dockerfile"
   args:
     - ${{ inputs.command }}
+
